--- a/biker.css
+++ b/biker.css
@@ -3,6 +3,8 @@ body {
     background-size: cover;
     /* background-position: center; */
     background-repeat: no-repeat;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: bold;
 }
 
 html {
