--- a/biker.css
+++ b/biker.css
@@ -11,6 +11,10 @@ html {
     height: 100%;
 }
 
+.fa-biking {
+    color: #008000;
+}
+
 #mainNavbar .navbar-nav .nav-link:hover {
     color: green;
     cursor: pointer;
@@ -110,7 +114,7 @@ div.item-image1 * {
 
 .navbar.scrolled {
     background: rgba(2,2,2,.9);
-    transition: background 500ms;
+    transition: background 4s;
 }
 /* .navbar-nav a:visited {
 cursor: none;
